Fix selection text alignment

--- a/contribs/gmf/examples/displayquerygrid.css
+++ b/contribs/gmf/examples/displayquerygrid.css
@@ -47,12 +47,6 @@ gmf-map > div {
   margin-right: 0px;
 }
 
-.navbar-text {
-  padding: 1px 5px;
-  margin: 0;
-  line-height: 1.5;
-}
-
 table>tbody>tr>td,
 table>tbody>tr>th,
 table>tfoot>tr>td,
